# src/admin/routes.ts
@@ -1,8 +1,8 @@
 import * as express from "express";
-import { blockUserById, getUserById, getUsersList } from "./controller";
+import { disableUserById, getUserById, getUsersList } from "./controller";
 import { authMiddleware } from "../middlewares/auth.middeleware";
 
-export const users: express.IRouter = express.Router();
-users.get("/users_list", authMiddleware, getUsersList);
-users.get("/find_user/:id", authMiddleware, getUserById);
-users.patch("/block_user/:id", authMiddleware, blockUserById);
+export const admin: express.IRouter = express.Router();
+admin.get("/users_list", authMiddleware, getUsersList);
+admin.get("/find_user/:id", authMiddleware, getUserById);
+admin.patch("/disable_user/:id", authMiddleware, disableUserById);
